Coverity analysis defect 147477: Data race condition

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • ALL
    • ClusterScalability Nov10-Nov24
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /data/mci/261f65657bd114359a8e3a064d6e450e/bazel_cache/54c751a1c930d7b7fb2afe7fb4a68167/execroot/_main/src/mongo/db/s/resharding/resharding_collection_cloner.cpp:536: MISSING_LOCK 147477 Accessing "this->this->_finalResult" without holding lock "mongo::ReshardingCloneFetcher._mutex". Elsewhere, "mongo::ReshardingCloneFetcher._finalResult" is written to with "ReshardingCloneFetcher._mutex" held 4 out of 4 times.

            Assignee:
            Ben Gawel (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: