SERVER-109739 Coverity analysis defect 147477: Data race condition (#44183)

GitOrigin-RevId: 6084170230546d07b798a29cd4e33580277b40ed